# HARP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: harp_core.c.E9A5AB6E60027D26.idx
cmake/: HarpConfig.cmake.in
include/harp/: harp.h  harp_api.h  harp_core.h
include/harp/utils/: harp_api.h  harp_build.h  harp_helpers.h  harp_platform.h  harp_version.h
src/: harp_api.c  harp_core.c  harp_impl.h  utils.h
src/impl/: harp_api.c  harp_api.h  harp_core.c  harp_core.h  harp_core_api.c  harp_core_api.h  harp_core_handler.c  harp_core_handler.h  harp_extended_handler.c  harp_extended_handler.h  harp_registry.c  harp_registry.h  harp_result.h  registry.c  registry.h
src/runtime/: harp_journal.c  harp_journal.h  harp_package.c  harp_package.h  harp_registry.c  harp_registry.h  harp_runtime.c  harp_runtime.h
tests/: CMakeLists.txt  harp_core_generic.c  harp_core_packages.c  harp_core_paths.c
tests/runtime/: harp_registry.c  harp_runtime.c
tests/unit/impl/: harp_registry.c
tools/harp/: command_new.c  command_version.c  main.c  template_writer.c  template_writer.h  utils.c  utils.h
tools/harp/templates/: application_templates.c  application_templates.h  package_templates.c  package_templates.h
